log
Wed, Apr 16, 2025  9:42:38 AM: 
 hashmap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  0|0
eeef3b7
Wed, Apr 16, 2025  9:58:21 AM: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
00286e8
Thu, Apr 17, 2025  8:41:32 PM: 
 tests:  1|5
total_score: 10/70
5c5c5fc
Thu, Apr 17, 2025 11:20:48 PM: 
 hashmap.c | 19 +++++++++++++++++--
 1 file changed, 17 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
df511e4
Fri, Apr 18, 2025  8:46:35 PM: 
 hashmap.c | 29 +++++++++++++++++++++++++++++
 1 file changed, 29 insertions(+)
 tests:  0|0
c84b774
Fri, Apr 18, 2025  8:47:40 PM: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
f53c7e1
Fri, Apr 18, 2025  8:56:37 PM: 
 hashmap.c | 22 +++++++++++++---------
 1 file changed, 13 insertions(+), 9 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'enlarge':
hashmap.c:67:27: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
     Pair ** old_buckets = map; // guardamos el antiguo mapa
                           ^~~
hashmap.c:68:25: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
     long old_capacity = map->buckets; // guardamos la capacidad del antiguo mapa
                         ^~~
cc1.exe: all warnings being treated as errors
0387682
Fri, Apr 18, 2025  9:03:20 PM: 
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'enlarge':
hashmap.c:67:27: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
     Pair ** old_buckets = map; // guardamos el antiguo mapa
                           ^~~
hashmap.c:68:25: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
     long old_capacity = map->buckets; // guardamos la capacidad del antiguo mapa
                         ^~~
cc1.exe: all warnings being treated as errors
8d5a341
Fri, Apr 18, 2025  9:08:00 PM: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
190d92e
Fri, Apr 18, 2025  9:14:38 PM: 
 tests:  0|0
6a0573a
Fri, Apr 18, 2025  9:17:56 PM: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
a5ec947
